# sqlBot

./: .google-cookie  .replit  README.md  bot.py  cjcjcjc.db  da.db  jdjd.db  pyproject.toml  requestsTest.py  sampletext.db  setup.py  sql_харкод.py  sqlbot.py  users.db  лишние строки.py
Khromov/: Bob.db  bob.db  fuchs.db  h.db  hello.db  hi.db  ndndndb.db  vvv.db  алабай.db  за.db  лох.db  оаоаьала.db  поп.db
Un57a6L3/: sampletextlmao.db
dan0nchik/: Lop.db  k.db
perchatka13/: Demv.db
sbelaits/: Я.db
sqlbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
