[tool.poetry]
name = "sqlbot"
version = "0.1.0"
description = ""
authors = ["Daniel Khromov <danielkhromov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google = "^2.0"
telegram = "^0.0.1"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
