[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Daniel Khromov <danielkhromov@gmail.com>"]
description = ""
name = "sqlbot"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
google = "^2.0"
python = "^3.7"
telegram = "^0.0.1"
[tool.poetry.dev-dependencies]
